Fix minimized scrollbar

--- a/src/css/components/_statblock-popover.scss
+++ b/src/css/components/_statblock-popover.scss
@@ -26,6 +26,10 @@
             overflow: hidden;
             list-style: none;
 
+            &.minimized {
+                padding: 0;
+            }
+
             .swiper-slide {
                 border-bottom: 1px solid white;
             }
